cabal-version:       >=1.10

name:                advent-of-code2020
version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
data-dir:            data

executable day1
  hs-source-dirs:    src
  main-is:           Day1/Main.hs
  default-language:  Haskell2010
  ghc-options:       -Wall -main-is Day1.Main
  build-depends:     base

executable day2
  hs-source-dirs:    src
  main-is:           Day2/Main.hs
  default-language:  Haskell2010
  ghc-options:       -Wall -main-is Day2.Main
  build-depends:     base

