cabal-version:       >=1.10

name:                advent-of-code2020
version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
data-dir:            data

executable day1
  hs-source-dirs:    day1
  main-is:           Main.hs
  default-language:  Haskell2010
  ghc-options:       -Wall
  build-depends:     base

executable day2
  hs-source-dirs:    day2
  main-is:           Main.hs
  default-language:  Haskell2010
  ghc-options:       -Wall
  build-depends:     base, attoparsec, range, text

