cabal-version:       2.2

name:                advent-of-code2020
version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
data-dir:            data

common shared-properties
  default-language:  Haskell2010
  ghc-options:       -Wall

library advent2020
  import:            shared-properties
  hs-source-dirs:    advent2020
  exposed-modules:   Advent2020
  build-depends:     base, attoparsec, text

executable day1
  import:            shared-properties
  hs-source-dirs:    day1
  main-is:           Main.hs
  build-depends:     base, advent2020, attoparsec

executable day2
  import:            shared-properties
  hs-source-dirs:    day2
  main-is:           Main.hs
  build-depends:     base, advent2020, attoparsec, range, text

executable day3
  import:            shared-properties
  hs-source-dirs:    day3
  main-is:           Main.hs
  build-depends:     base, advent2020, parallel, text

executable day4
  import:            shared-properties
  hs-source-dirs:    day4
  main-is:           Main.hs
  build-depends:     base, advent2020, attoparsec, lens, parser-combinators, text
  other-modules:     Passport

executable day5
  import:            shared-properties
  hs-source-dirs:    day5
  main-is:           Main.hs
  build-depends:     base, advent2020, text

executable day6
  import:            shared-properties
  hs-source-dirs:    day6
  main-is:           Main.hs
  build-depends:     base, advent2020, containers, text

executable day7
  import:            shared-properties
  hs-source-dirs:    day7
  main-is:           Main.hs
  build-depends:     base, advent2020, attoparsec, containers, multi-containers, text, mtl

executable day8
  import:            shared-properties
  hs-source-dirs:    day8
  main-is:           Main.hs
  build-depends:     base, advent2020, array, attoparsec, containers, lens, logict, mtl

